// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphHelpers should convert graph data and generate tooltips when usage is populated: usage populated 1`] = `
Object {
  "chartData": Array [
    Object {
      "tooltip": "5 lorem tooltip label June 1",
      "x": 0,
      "xAxisLabel": "Jun 1",
      "y": 5,
    },
    Object {
      "tooltip": "7 lorem tooltip label June 2
 +2 t('curiosity-graph.tooltipPreviousLabelDaily')",
      "x": 1,
      "xAxisLabel": "Jun 2",
      "y": 7,
    },
    Object {
      "tooltip": "3 lorem tooltip label June 3
 -4 t('curiosity-graph.tooltipPreviousLabelDaily')",
      "x": 2,
      "xAxisLabel": "Jun 3",
      "y": 3,
    },
    Object {
      "tooltip": "No lorem data",
      "x": 3,
      "xAxisLabel": "Jun 4",
      "y": 0,
    },
    Object {
      "tooltip": "No lorem data",
      "x": 4,
      "xAxisLabel": "Jun 5",
      "y": 0,
    },
  ],
  "chartDataThresholds": Array [],
  "chartXAxisLabelIncrement": 5,
}
`;

exports[`GraphHelpers should convert graph data and return zeroed usage array if error: error is true 1`] = `
Object {
  "chartData": Array [
    Object {
      "x": 0,
      "xAxisLabel": "Jun 1",
      "y": 0,
    },
    Object {
      "x": 1,
      "xAxisLabel": "Jun 2",
      "y": 0,
    },
    Object {
      "x": 2,
      "xAxisLabel": "Jun 3",
      "y": 0,
    },
    Object {
      "x": 3,
      "xAxisLabel": "Jun 4",
      "y": 0,
    },
    Object {
      "x": 4,
      "xAxisLabel": "Jun 5",
      "y": 0,
    },
  ],
  "chartDataThresholds": Array [],
  "chartXAxisLabelIncrement": 5,
}
`;

exports[`GraphHelpers should convert graph data and return zeroed usage array if usage is empty: zeroed array 1`] = `
Object {
  "chartData": Array [
    Object {
      "x": 0,
      "xAxisLabel": "Jun 1",
      "y": 0,
    },
    Object {
      "x": 1,
      "xAxisLabel": "Jun 2",
      "y": 0,
    },
    Object {
      "x": 2,
      "xAxisLabel": "Jun 3",
      "y": 0,
    },
    Object {
      "x": 3,
      "xAxisLabel": "Jun 4",
      "y": 0,
    },
    Object {
      "x": 4,
      "xAxisLabel": "Jun 5",
      "y": 0,
    },
  ],
  "chartDataThresholds": Array [],
  "chartXAxisLabelIncrement": 5,
}
`;

exports[`GraphHelpers should convert graph data and returned zeroed array when usage throws error: throws error 1`] = `
Object {
  "chartData": Array [
    Object {
      "x": 0,
      "xAxisLabel": "Jun 1",
      "y": 0,
    },
    Object {
      "x": 1,
      "xAxisLabel": "Jun 2",
      "y": 0,
    },
    Object {
      "x": 2,
      "xAxisLabel": "Jun 3",
      "y": 0,
    },
    Object {
      "x": 3,
      "xAxisLabel": "Jun 4",
      "y": 0,
    },
    Object {
      "x": 4,
      "xAxisLabel": "Jun 5",
      "y": 0,
    },
  ],
  "chartDataThresholds": Array [],
  "chartXAxisLabelIncrement": 5,
}
`;

exports[`GraphHelpers should convert graph data and threshold data: threshold check 1`] = `
Object {
  "chartData": Array [
    Object {
      "tooltip": "5 lorem tooltip label June 1",
      "x": 0,
      "xAxisLabel": "Jun 1",
      "y": 5,
    },
    Object {
      "tooltip": "7 lorem tooltip label June 2
 +2 t('curiosity-graph.tooltipPreviousLabelDaily')",
      "x": 1,
      "xAxisLabel": "Jun 2",
      "y": 7,
    },
    Object {
      "tooltip": "3 lorem tooltip label June 3
 -4 t('curiosity-graph.tooltipPreviousLabelDaily')",
      "x": 2,
      "xAxisLabel": "Jun 3",
      "y": 3,
    },
    Object {
      "x": 3,
      "xAxisLabel": "Jun 4",
      "y": 0,
    },
    Object {
      "tooltip": "1 lorem tooltip label June 5",
      "x": 4,
      "xAxisLabel": "Jun 5",
      "y": 1,
    },
  ],
  "chartDataThresholds": Array [
    Object {
      "tooltip": "ipsum threshhold label: 100",
      "x": 0,
      "y": 100,
    },
    Object {
      "x": 1,
      "y": 0,
    },
    Object {
      "x": 2,
      "y": 0,
    },
    Object {
      "x": 3,
      "y": 0,
    },
    Object {
      "x": 4,
      "y": 0,
    },
  ],
  "chartXAxisLabelIncrement": 5,
}
`;

exports[`GraphHelpers should convert graph data and threshold data: threshold check date and index mismatch from data 1`] = `
Object {
  "chartData": Array [
    Object {
      "tooltip": "5 lorem tooltip label June 1",
      "x": 0,
      "xAxisLabel": "Jun 1",
      "y": 5,
    },
    Object {
      "tooltip": "7 lorem tooltip label June 2
 +2 t('curiosity-graph.tooltipPreviousLabelDaily')",
      "x": 1,
      "xAxisLabel": "Jun 2",
      "y": 7,
    },
    Object {
      "tooltip": "3 lorem tooltip label June 3
 -4 t('curiosity-graph.tooltipPreviousLabelDaily')",
      "x": 2,
      "xAxisLabel": "Jun 3",
      "y": 3,
    },
    Object {
      "x": 3,
      "xAxisLabel": "Jun 4",
      "y": 0,
    },
    Object {
      "tooltip": "1 lorem tooltip label June 5",
      "x": 4,
      "xAxisLabel": "Jun 5",
      "y": 1,
    },
  ],
  "chartDataThresholds": Array [],
  "chartXAxisLabelIncrement": 5,
}
`;

exports[`GraphHelpers should handle cross quarter labels: quarter granularity 1`] = `
Object {
  "chartData": Array [
    Object {
      "tooltip": "5 lorem tooltip label April",
      "x": 0,
      "xAxisLabel": "Apr",
      "y": 5,
    },
    Object {
      "x": 1,
      "xAxisLabel": "Jul",
      "y": 0,
    },
    Object {
      "x": 2,
      "xAxisLabel": "Oct",
      "y": 0,
    },
    Object {
      "x": 3,
      "xAxisLabel": "Jan
2019",
      "y": 0,
    },
    Object {
      "tooltip": "7 lorem tooltip label April",
      "x": 4,
      "xAxisLabel": "Apr",
      "y": 7,
    },
  ],
  "chartDataThresholds": Array [],
  "chartXAxisLabelIncrement": 1,
}
`;

exports[`GraphHelpers should handle cross year labels: cross year 1`] = `
Object {
  "chartData": Array [
    Object {
      "tooltip": "5 lorem tooltip label December 31",
      "x": 0,
      "xAxisLabel": "Dec 31",
      "y": 5,
    },
    Object {
      "tooltip": "7 lorem tooltip label January 1
 +2 t('curiosity-graph.tooltipPreviousLabelDaily')",
      "x": 1,
      "xAxisLabel": "Jan 1",
      "y": 7,
    },
    Object {
      "tooltip": "7 lorem tooltip label January 2",
      "x": 2,
      "xAxisLabel": "Jan 2",
      "y": 7,
    },
    Object {
      "tooltip": "7 lorem tooltip label January 3",
      "x": 3,
      "xAxisLabel": "Jan 3",
      "y": 7,
    },
    Object {
      "tooltip": "7 lorem tooltip label January 4",
      "x": 4,
      "xAxisLabel": "Jan 4",
      "y": 7,
    },
    Object {
      "tooltip": "7 lorem tooltip label January 5 2019",
      "x": 5,
      "xAxisLabel": "Jan 5 2019",
      "y": 7,
    },
    Object {
      "tooltip": "7 lorem tooltip label January 6",
      "x": 6,
      "xAxisLabel": "Jan 6",
      "y": 7,
    },
  ],
  "chartDataThresholds": Array [],
  "chartXAxisLabelIncrement": 5,
}
`;

exports[`GraphHelpers should handle tooltips in a specific set of ways: tooltip check 1`] = `
Object {
  "chartData": Array [
    Object {
      "x": 0,
      "xAxisLabel": "Jun 1",
      "y": 0,
    },
    Object {
      "x": 1,
      "xAxisLabel": "Jun 2",
      "y": 0,
    },
    Object {
      "tooltip": "3 lorem tooltip label June 3",
      "x": 2,
      "xAxisLabel": "Jun 3",
      "y": 3,
    },
    Object {
      "tooltip": "No lorem data",
      "x": 3,
      "xAxisLabel": "Jun 4",
      "y": 0,
    },
    Object {
      "tooltip": "3 lorem tooltip label June 5",
      "x": 4,
      "xAxisLabel": "Jun 5",
      "y": 3,
    },
  ],
  "chartDataThresholds": Array [
    Object {
      "tooltip": "ipsum threshhold label: 100",
      "x": 0,
      "y": 100,
    },
    Object {
      "tooltip": "ipsum threshhold label: 100",
      "x": 1,
      "y": 100,
    },
    Object {
      "tooltip": "ipsum threshhold label: 100",
      "x": 2,
      "y": 100,
    },
    Object {
      "x": 3,
      "y": 0,
    },
    Object {
      "x": 4,
      "y": 0,
    },
  ],
  "chartXAxisLabelIncrement": 5,
}
`;

exports[`GraphHelpers should have specific functions: graphHelpers 1`] = `
Object {
  "convertChartData": [Function],
  "fillFormatChartData": [Function],
  "getChartXAxisLabelIncrement": [Function],
  "getGranularityDateType": [Function],
  "getGraphLabels": [Function],
  "getLabel": [Function],
}
`;

exports[`GraphHelpers should return a date type based on granularity: granularity date type 1`] = `
Object {
  "daily": "days",
  "monthly": "months",
  "quarterly": "quarters",
  "weekly": "weeks",
}
`;

exports[`GraphHelpers should return a label based on granularity: granularity based label 1`] = `
Object {
  "daily": Object {
    "label": "ipsum tooltip label",
    "previousLabel": "t('curiosity-graph.tooltipPreviousLabelDaily')",
  },
  "monthly": Object {
    "label": "ipsum tooltip label",
    "previousLabel": "t('curiosity-graph.tooltipPreviousLabelMonthly')",
  },
  "quarterly": Object {
    "label": "ipsum tooltip label",
    "previousLabel": "t('curiosity-graph.tooltipPreviousLabelQuarterly')",
  },
  "weekly": Object {
    "label": "ipsum tooltip label",
    "previousLabel": "t('curiosity-graph.tooltipPreviousLabelWeekly')",
  },
}
`;

exports[`GraphHelpers should return a x axis tick increment based on granularity: x axis tick increment 1`] = `
Object {
  "daily": 5,
  "monthly": 2,
  "quarterly": 1,
  "weekly": 2,
}
`;
